cleaning up, fixing full height in viewer extension, making flexbox work on safari and ie11

--- a/data/assets/general.css
+++ b/data/assets/general.css
@@ -6,7 +6,7 @@
   font-style: normal;
   font-weight: normal;
   src: url("../libs/ubuntu-font/Ubuntu-R.woff") format('woff');
-  src: url("../libs/ubuntu-font/Ubuntu-R.ttf"") format('truetype');
+  src: url("../libs/ubuntu-font/Ubuntu-R.ttf") format('truetype');
 }
 
 html, body {
@@ -92,7 +92,6 @@ html, body {
 
 #iframeViewer {
   width: 100%;
-  height: 100%;
   border-width: 0;
 }
 
@@ -260,7 +259,7 @@ li hr {
 }
 
 /* Layout */
-#directoryNavigatorNorth, #locationContent, #tagGroupsContent, .middle-north, .east-north {
+#directoryNavigatorNorth, #locationContent, #tagGroupsContent{
 	background-color:  transparent;
 }
 
@@ -368,7 +367,7 @@ li hr {
 #viewer {
   background-color: white;
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 /* Directory Navigation #F6A828*/
@@ -642,6 +641,7 @@ input a.resetFilter {
 
 #alternativeNavigator {
   margin: 5px 5px 5px 10px;
+  height: 30px;
 }
 
 #fileViewerMainToolbar {
